export interface CategoryDto {
  description?: string;
  image?: string;
  is_active: boolean;
}
